--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,66 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;700;800;900&family=Urbanist:wght@100;200;300;400;500;600;700;800;900&display=swap');
+/* header font */
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Lexend+Deca:wght@100..900&display=swap');
+
+
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+html{
+    scroll-behavior: smooth;
+}
+body{
+    font-family: 'Urbanist', sans-serif;
+    overflow-x:hidden ;
+}
+.container{
+    max-width:1170px ;
+    padding-left: 20px;
+    padding-right: 20px;
+    margin: auto;
+}
+section{
+    padding: 50px 0;
+}
+.model{
+   
+    z-index: 999;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.head{
+    background-color: transparent;
+    width: 100%;
+    position: fixed;
+    z-index: 99;
+    
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  .head.active{
+    background-color: #fff;
   }
-  to {
-    transform: rotate(360deg);
+/* Example usage of DM Sans */
+.body-text {
+    font-family: 'DM Sans', sans-serif;
   }
+  
+  /* Example usage of Lexend Deca */
+.heading-text {
+    font-family: 'Lexend Deca', sans-serif;
+  }
+
+
+
+
+
+
+ 
+/* responsive */
+@media only screen and (max-width:786px) {
+    .toggle{
+        margin-right: 20px !important;
+        background: none !important;
+    }
+    
 }
